force-app/main/default/objects/Account/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veterinarian</fullName>
            </value>
            <value>
                <fullName>Certified Veterinary Technician</fullName>
            </value>
            <value>
                <fullName>Veterinary Assistant</fullName>
            </value>
            <value>
                <fullName>Practice Manager</fullName>
            </value>
            <value>
                <fullName>Support Staff</fullName>
            </value>
            <value>
                <fullName>CSR</fullName>
            </value>
            <value>
                <fullName>Kennel Attendant/Technician</fullName>
            </value>
            <value>
                <fullName>Faculty - Veterinary Program</fullName>
            </value>
            <value>
                <fullName>Faculty - Veterinary Assistant Program</fullName>
            </value>
            <value>
                <fullName>Faculty - Veterinary Technician Program</fullName>
            </value>
            <value>
                <fullName>Student - Veterinary</fullName>
            </value>
            <value>
                <fullName>Student - Veterinary Assistant</fullName>
            </value>
            <value>
                <fullName>Student - Veterinary Technician</fullName>
            </value>
            <value>
                <fullName>Behavioral Consultant</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>Groomer</fullName>
            </value>
            <value>
                <fullName>Pet Sitter</fullName>
            </value>
            <value>
                <fullName>Dog Walker</fullName>
            </value>
            <value>
                <fullName>Other (Veterinary)</fullName>
            </value>
            <value>
                <fullName>Other (Non-Veterinary)</fullName>
            </value>
            <value>
                <fullName>Team Admin</fullName>
                <isActive>false</isActive>
                <label>Team Admin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>