force-app/main/default/objects/Account/fields/KPA_CTP__c.field-meta.xml
<CustomField>
    <fullName>KPA_CTP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Karen Pryor Certified Training Partner</inlineHelpText>
    <label>KPA CTP</label>
    <type>Checkbox</type>
</CustomField>