force-app/main/default/objects/Account/fields/Last_Login__c.field-meta.xml
<CustomField>
    <fullName>Last_Login__c</fullName>
    <label>Last Login</label>
    <type>DateTime</type>
</CustomField>