force-app/main/default/objects/Account/fields/Learn_Dash_ID__c.field-meta.xml
<CustomField>
    <fullName>Learn_Dash_ID__c</fullName>
    <label>Learn Dash ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>