force-app/main/default/objects/Account/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <inlineHelpText>This field is intended for veterinarians and veterinary technicians/nurses.</inlineHelpText>
    <label>License Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>