force-app/main/default/objects/Account/fields/LMS_ID__c.field-meta.xml
<CustomField>
    <fullName>LMS_ID__c</fullName>
    <label>LMS ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>