force-app/main/default/objects/Account/fields/Member_of_Certified_Practice__c.field-meta.xml
<CustomField>
    <fullName>Member_of_Certified_Practice__c</fullName>
    <formula>ISPICKVAL(Parent.Certified_Practice__c, &quot;Completed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member of Certified Practice</label>
    <type>Checkbox</type>
</CustomField>