force-app/main/default/objects/Account/fields/Member_Promo__c.field-meta.xml
<CustomField>
    <fullName>Member_Promo__c</fullName>
    <label>Member Promo</label>
    <type>TextArea</type>
</CustomField>