force-app/main/default/objects/Account/fields/MOU_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>MOU_Expiration_Date__c</fullName>
    <description>for consolidators</description>
    <label>MOU Expiration Date</label>
    <type>Date</type>
</CustomField>