force-app/main/default/objects/Account/fields/MOU_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MOU_Start_Date__c</fullName>
    <description>for consolidators</description>
    <label>MOU Start Date</label>
    <type>Date</type>
</CustomField>