force-app/main/default/objects/Account/fields/No_Business__c.field-meta.xml
<CustomField>
    <fullName>No_Business__c</fullName>
    <formula>ISNULL(Business__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Business</label>
    <type>Checkbox</type>
</CustomField>