force-app/main/default/objects/Account/fields/Number_of_DVMs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_DVMs__c</fullName>
    <description>For Practice Certification: number of DVMs to calculate price.</description>
    <label>Number of DVMs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>