force-app/main/default/objects/Account/fields/Number_of_Individuals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Individuals__c</fullName>
    <description>For consolidators</description>
    <label>Number of Individuals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>