force-app/main/default/objects/Account/fields/onemergefree__AccountNameUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__AccountNameUpdateDate__c</fullName>
    <description>Timestamp of the latest update to the Account Name.</description>
    <inlineHelpText>Timestamp of the latest update to the Account Name.</inlineHelpText>
    <label>Account Name Update Date</label>
    <type>DateTime</type>
</CustomField>