force-app/main/default/objects/Account/fields/onemergefree__BillingAddressUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__BillingAddressUpdateDate__c</fullName>
    <description>Timestamp of the latest update to the Billing Address.</description>
    <inlineHelpText>Timestamp of the latest update to the Billing Address.</inlineHelpText>
    <label>Billing Address Update Date</label>
    <type>DateTime</type>
</CustomField>