force-app/main/default/objects/Account/fields/onemergefree__IsMergeMasterRecord__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__IsMergeMasterRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, then the record has been merged as the Master Record for a group.</description>
    <inlineHelpText>If TRUE, then the record has been merged as the Master Record for a group.</inlineHelpText>
    <label>Is Merge Master Record?</label>
    <type>Checkbox</type>
</CustomField>