force-app/main/default/objects/Account/fields/onemergefree__PhoneUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__PhoneUpdateDate__c</fullName>
    <description>Timestamp of the latest update to the Phone.</description>
    <inlineHelpText>Timestamp of the latest update to the Phone.</inlineHelpText>
    <label>Phone Update Date</label>
    <type>DateTime</type>
</CustomField>