force-app/main/default/objects/Account/fields/onemergefree__ShippingAddressUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__ShippingAddressUpdateDate__c</fullName>
    <description>Timestamp of the latest update to the Shipping Address.</description>
    <inlineHelpText>Timestamp of the latest update to the Shipping Address.</inlineHelpText>
    <label>Shipping Address Update Date</label>
    <type>DateTime</type>
</CustomField>