force-app/main/default/objects/Account/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <label>Organization</label>
    <length>80</length>
    <type>Text</type>
</CustomField>