force-app/main/default/objects/Account/fields/Other_International_Program__c.field-meta.xml
<CustomField>
    <fullName>Other_International_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other International Program</label>
    <type>Checkbox</type>
</CustomField>