force-app/main/default/objects/Account/fields/Part_of_a_PIP__c.field-meta.xml
<CustomField>
    <fullName>Part_of_a_PIP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a business account is part of a practice implementation group to achieve PC.</description>
    <inlineHelpText>This field indicates whether a practice is currently a part of a practice implementation group to achieve PC.</inlineHelpText>
    <label>Part of a PIP?</label>
    <type>Checkbox</type>
</CustomField>