force-app/main/default/objects/Account/fields/PCBC_A__c.field-meta.xml
<CustomField>
    <fullName>PCBC_A__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Professional Canine Behavior Consultant (Accredited) through the Pet Professional Accreditation Board</inlineHelpText>
    <label>PCBC-A</label>
    <type>Checkbox</type>
</CustomField>