force-app/main/default/objects/Account/fields/PCT_A__c.field-meta.xml
<CustomField>
    <fullName>PCT_A__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Professional Canine Trainer (Accredited)</inlineHelpText>
    <label>PCT-A</label>
    <type>Checkbox</type>
</CustomField>