force-app/main/default/objects/Account/fields/PDDCBA__c.field-meta.xml
<CustomField>
    <fullName>PDDCBA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Professional Development Diploma in Canine Behavior Analysis and Counseling through the American College of Applied Science</inlineHelpText>
    <label>PDDCBA</label>
    <type>Checkbox</type>
</CustomField>