force-app/main/default/objects/Account/fields/Pending_Business__c.field-meta.xml
<CustomField>
    <fullName>Pending_Business__c</fullName>
    <label>Pending Business</label>
    <length>18</length>
    <type>Text</type>
</CustomField>