force-app/main/default/objects/Account/fields/Pending_Business_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Pending_Business_Admin_Email__c</fullName>
    <label>Pending Business Admin Email</label>
    <type>Email</type>
</CustomField>