force-app/main/default/objects/Account/fields/PMCT__c.field-meta.xml
<CustomField>
    <fullName>PMCT__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Pat Miller Certified Trainer</inlineHelpText>
    <label>PMCT</label>
    <type>Checkbox</type>
</CustomField>