force-app/main/default/objects/Account/fields/Practice_Certification_Date_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Practice_Certification_Date_Achieved__c</fullName>
    <label>Practice Certification Date Achieved</label>
    <type>Date</type>
</CustomField>