force-app/main/default/objects/Account/fields/PracticeLevelRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>PracticeLevelRenewalDate__c</fullName>
    <label>PracticeLevelRenewalDate</label>
    <type>Date</type>
</CustomField>