force-app/main/default/objects/Account/fields/Preferred_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preferred Pricing</label>
    <type>Checkbox</type>
</CustomField>