force-app/main/default/objects/Account/fields/Provisioned_to_B2B_Store__c.field-meta.xml
<CustomField>
    <fullName>Provisioned_to_B2B_Store__c</fullName>
    <label>Provisioned to B2B Store</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
            <value>
                <fullName>User Exist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>