force-app/main/default/objects/Account/fields/Recertification_Date__c.field-meta.xml
<CustomField>
    <fullName>Recertification_Date__c</fullName>
    <description>For Certified Practices: date of recertification, to be updated every 3 years.</description>
    <label>Recertification Date</label>
    <type>Date</type>
</CustomField>