force-app/main/default/objects/Account/fields/Reminders__c.field-meta.xml
<CustomField>
    <fullName>Reminders__c</fullName>
    <description>Practice Certification: defines what accounts received automated versus direct reminders.</description>
    <label>Reminders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automated</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>