force-app/main/default/objects/Account/fields/Removed_From_Team__c.field-meta.xml
<CustomField>
    <fullName>Removed_From_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Removed From Team</label>
    <type>Checkbox</type>
</CustomField>