force-app/main/default/objects/Account/fields/School_University__c.field-meta.xml
<CustomField>
    <fullName>School_University__c</fullName>
    <label>School/University</label>
    <length>80</length>
    <type>Text</type>
</CustomField>