force-app/main/default/objects/Account/fields/Select_PIP__c.field-meta.xml
<CustomField>
    <fullName>Select_PIP__c</fullName>
    <description>If checkbox for field &quot;Part of PIP?&quot; is selected, this field will indicate what PIP a business account is a part of.</description>
    <label>Select PIP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banfield</fullName>
            </value>
            <value>
                <fullName>Thrive</fullName>
            </value>
            <value>
                <fullName>Indie Vets</fullName>
            </value>
            <value>
                <fullName>Encore</fullName>
            </value>
            <value>
                <fullName>Sploot</fullName>
            </value>
            <value>
                <fullName>VMM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>