force-app/main/default/objects/Account/fields/Stripe_Customer_URL__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://dashboard.stripe.com/test/customers/&quot; &amp;  StripeCustomerId__c, &quot;View Customer in Stripe&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stripe Customer URL</label>
    <type>Text</type>
</CustomField>