force-app/main/default/objects/Account/fields/StripeCustomerId__c.field-meta.xml
<CustomField>
    <fullName>StripeCustomerId__c</fullName>
    <label>StripeCustomerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>