force-app/main/default/objects/Account/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Student</label>
    <type>Checkbox</type>
</CustomField>