force-app/main/default/objects/Account/fields/Student_Exp__c.field-meta.xml
<CustomField>
    <fullName>Student_Exp__c</fullName>
    <label>Student Exp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>