force-app/main/default/objects/Account/fields/SX_Above_Unit_Lookup__c.field-meta.xml
<CustomField>
    <fullName>SX_Above_Unit_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SX Above Unit Lookup</label>
    <referenceTo>SX_Above_Unit__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>