force-app/main/default/objects/Account/fields/SX_User_Synced__c.field-meta.xml
<CustomField>
    <fullName>SX_User_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SX User Synced</label>
    <type>Checkbox</type>
</CustomField>