force-app/main/default/objects/Account/fields/Tax_Exempt_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_ID__c</fullName>
    <label>Tax Exempt ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>