force-app/main/default/objects/Account/fields/Tax_Exemption_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exemption_Number__c</fullName>
    <label>Tax Exemption Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>