force-app/main/default/objects/Account/fields/Trainer_CCPDT_Number__c.field-meta.xml
<CustomField>
    <fullName>Trainer_CCPDT_Number__c</fullName>
    <inlineHelpText>This field is intended for Certified Professional Dog Trainers.</inlineHelpText>
    <label>Trainer CCPDT Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>