force-app/main/default/objects/Account/fields/Uploaded_By__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_By__c</fullName>
    <label>Uploaded By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>