force-app/main/default/objects/Account/fields/VSAG__c.field-meta.xml
<CustomField>
    <fullName>VSAG__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Victoria Stilwell Academy Graduate or Victoria Stilwell Positively Dog Training approved member</inlineHelpText>
    <label>VSAG</label>
    <type>Checkbox</type>
</CustomField>