force-app/main/default/objects/Account/fields/VTS_Behavior__c.field-meta.xml
<CustomField>
    <fullName>VTS_Behavior__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Veterinary Technician Specialist with Specialty in Behavior</inlineHelpText>
    <label>VTS (Behavior)</label>
    <type>Checkbox</type>
</CustomField>