force-app/main/default/objects/Account/recordTypes/Consolidators.recordType-meta.xml
<RecordType>
    <fullName>Consolidators</fullName>
    <active>true</active>
    <label>Consolidators</label>
</RecordType>