force-app/main/default/objects/Account/recordTypes/Corporate_Accounts.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Accounts</fullName>
    <active>true</active>
    <description>CPMs, PPPs, &amp; Strategic Alliances</description>
    <label>Corporate Accounts</label>
</RecordType>