force-app/main/default/objects/Account/listViews/Current_PPPs.listView-meta.xml
<ListView>
    <fullName>Current_PPPs</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Contract_Start_Date__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Corporate_Accounts</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Current_PPP</value>
    </filters>
    <label>Current PPPs</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Corporate_Accounts</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>