force-app/main/default/objects/Account/listViews/onemergefree__All.listView-meta.xml
<ListView>
    <fullName>onemergefree__All</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>